[package]
name = "dcl_wasm"
version = "0.1.0"
edition = "2021"

[lib]

[features]
default = []

[dependencies]
common = { workspace = true }
dcl_component = { workspace = true }
dcl = { workspace = true }
ipfs = { workspace = true }
wallet = { workspace = true }
system_bridge = { workspace = true }

bevy = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
futures-lite = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num-traits = { workspace = true }
http = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
multihash-codetable = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
anyhow = { workspace = true }
web-fs = { workspace = true }

serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

num-derive = "0.4.2"
num = "0.4"
bytes = "1.4.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
log = "0.4"
