[package]
name = "dcl_wasm"
version = "0.1.0"
edition = "2021"

[lib]

[features]
default = []

[dependencies]
common = { workspace = true }
dcl = { workspace = true }
ipfs = { workspace = true }
wallet = { workspace = true }
system_bridge = { workspace = true }

bevy = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
anyhow = { workspace = true }
web-fs = { workspace = true }

serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

log = "0.4"
