[package]
name = "emotes"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
common = { workspace = true }
comms = { workspace = true }
console = { workspace = true }
dcl = { workspace = true }
dcl_component = { workspace = true }
scene_runner = { workspace = true }
ipfs = { workspace = true }

bevy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urn = { workspace = true }
