[package]
name = "ipfs"
version = "0.1.0"
edition = "2021"

[lib]

[features]
hot_reload = []

[dependencies]
common = { workspace = true }
console = { workspace = true }

bevy = { workspace = true }
anyhow = { workspace = true }
bevy_console = { workspace = true }
bimap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
urn = { workspace = true }
async-std = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
async-compat = { workspace = true }
async-fs = { workspace = true }
multihash-codetable = { version = "0.1.1", features = ["digest", "sha2"] }

url = "2.4.0"
downcast-rs = "1.2"
