[package]
name = "nft"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
common = { workspace = true }
console = { workspace = true }
dcl = { workspace = true }
dcl_component = { workspace = true }
scene_runner = { workspace = true }
ipfs = { workspace = true }
scene_material = { workspace = true }
platform = { workspace = true }

bevy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urn = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
async-std = { workspace = true }
urlencoding = { workspace = true }
async-compat = { workspace = true }

num = "0.4.1"
resvg = "0.43"
