[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[lib]

[features]

[dependencies]

bevy = { workspace = true }
anyhow = { workspace = true }
bytes = "1"
tungstenite = { workspace = true }
futures-util = { workspace = true }
futures-timer = { workspace = true }
reqwest = { workspace = true }
directories = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { workspace = true }
async-compat = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen feature swaps futures-timer's backend to setTimeout (gloo-timers)
futures-timer = { workspace = true, features = ["wasm-bindgen"] }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
ws_stream_wasm = "0.7.5"
spin = { version = "0.9.8", default-features = false, features = ["rwlock"] }
web-fs = { workspace = true }
