[package]
name = "restricted_actions"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
common = { workspace = true }
ipfs = { workspace = true }
scene_runner = { workspace = true }
avatar = { workspace = true }
ui_core = { workspace = true }
comms = { workspace = true }
wallet = { workspace = true }

bevy = { workspace = true }
tokio = { workspace = true }
isahc = { workspace = true }
opener = "0.6"
