[package]
name = "restricted_actions"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
common = { workspace = true }
ipfs = { workspace = true }
scene_runner = { workspace = true }
avatar = { workspace = true }
ui_core = { workspace = true }
comms = { workspace = true }
wallet = { workspace = true }
dcl_component = { workspace = true }
nft = { workspace = true }

bevy = { workspace = true }
tokio = { workspace = true }
isahc = { workspace = true }
serde_json = { workspace = true }
ethers-core = { workspace = true }
urlencoding = { workspace = true }
opener = { workspace = true }
anyhow = { workspace = true }
