[package]
name = "scene_inspector"
version = "0.1.0"
edition = "2021"

[lib]

[lints]
workspace = true

[dependencies]
common = { workspace = true }
dcl = { workspace = true }
dcl_component = { workspace = true }
scene_runner = { workspace = true }
console = { workspace = true }

bevy = { workspace = true }
bevy_console = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
