[package]
name = "scene_runner"
version = "0.1.0"
edition = "2021"

[lib]

[lints]
workspace = true

[dependencies]
common = { workspace = true }
dcl_component = { workspace = true }
dcl = { workspace = true }
ipfs = { workspace = true }
comms = { workspace = true }
ui_core = { workspace = true }
console = { workspace = true }
input_manager = { workspace = true }
wallet = { workspace = true }
scene_material = { workspace = true }
world_ui = { workspace = true }

bevy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bevy_console = { workspace = true }
clap = { workspace = true }
bimap = { workspace = true }
nalgebra = { version = "0.33", features = [ "convert-glam027" ] }
futures-lite = { workspace = true }
once_cell = { workspace = true }
rapier3d-f64 = { workspace = true }
urlencoding = { workspace = true }
itertools = { workspace = true }
analytics = { workspace = true }
bevy_dui = { workspace = true }

petgraph = "0.6.3"
spin_sleep = "1.1.1"
image = "0.25"
