[package]
name = "scene_runner"
version = "0.1.0"
edition = "2021"

[lib]

[lints]
workspace = true

[features]
default = []
gen-tests = []
deno = ["dep:dcl_deno"]
wasm = ["dep:dcl_wasm"]

[dependencies]
common = { workspace = true }
dcl_component = { workspace = true }
dcl = { workspace = true }
dcl_deno = { workspace = true, optional = true }
dcl_wasm = { workspace = true, optional = true }
ipfs = { workspace = true }
comms = { workspace = true }
ui_core = { workspace = true }
console = { workspace = true }
input_manager = { workspace = true }
wallet = { workspace = true }
scene_material = { workspace = true }
world_ui = { workspace = true }
propagate = { workspace = true }

bevy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bevy_console = { workspace = true }
clap = { workspace = true }
bimap = { workspace = true }
nalgebra = { version = "0.33", features = [ "convert-glam027" ] }
futures-lite = { workspace = true }
once_cell = { workspace = true }
rapier3d-f64 = { workspace = true }
urlencoding = { workspace = true }
itertools = { workspace = true }
analytics = { workspace = true }
bevy_dui = { workspace = true }
rand = { workspace = true }
crc = { workspace = true }
system_bridge = { workspace = true }
multihash-codetable = { workspace = true }
base64 = { workspace = true }
async-std = { workspace = true }

petgraph = "0.6.3"
spin_sleep = "1.1.1"
image = "0.25"
boimp = { workspace = true }

