[package]
name = "social"
version = "0.1.0"
edition = "2021"

[lib]

[features]
social = ["dep:dcl-rpc", "dep:matrix-sdk", "dcl_component/social"]

[dependencies]
common = { workspace = true }
dcl_component = { workspace = true }
wallet = { workspace = true }

bevy = { workspace = true }
ethers-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
opener = { workspace = true }
web-time = { workspace = true }

dcl-rpc = { workspace = true, optional = true }
futures-util = { workspace = true }

matrix-sdk = { version = "0.10", default-features = false, features = [
  "e2e-encryption",
  "native-tls",
], optional = true }
