[package]
name = "system_bridge"
version = "0.1.0"
edition = "2021"

[lib]

[lints]
workspace = true

[dependencies]
common = { workspace = true }

bevy = { workspace = true }
bevy_console = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
ipfs = { workspace = true }
serde_json = { workspace = true }
dcl_component = { workspace = true }
platform = { workspace = true }

serde_repr = "0.1"