[package]
name = "system_ui"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
common = { workspace = true }
comms = { workspace = true }
dcl = { workspace = true }
dcl_component = { workspace = true }
scene_runner = { workspace = true }
ipfs = { workspace = true }
ui_core = { workspace = true }
avatar = { workspace = true }

bevy = { workspace = true }
bevy_egui = { workspace = true }
urn = { workspace = true }
