[package]
name = "tween"
version = "0.1.0"
edition = "2021"

[features]
default = ["adr285"]
tween_debug = []
adr285 = []
alt_rotate_continuous = ["adr285"]

[lib]

[dependencies]
common = { workspace = true }
dcl = { workspace = true }
dcl_component = { workspace = true }
scene_runner = { workspace = true }
scene_material = { workspace = true }

bevy = { workspace = true }
simple-easing = "1"
